--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "shadcn-ui": "^0.4.2"
+  "next": "14.2.4",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.4.5"
