--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-  "next": "14.2.4",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
+    "next": "14.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
+    "@types/react": "^19.1.8",
     "typescript": "^5.4.5"
   }
 }
